# MonteCarloCPP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  console.cpp  console.hpp  main.cpp
src/arena/: match.cpp  match.hpp
src/arena/players/: grave_player.cpp  grave_player.hpp  human_player.cpp  human_player.hpp  mcrave_player.cpp  mcrave_player.hpp  mcs_player.cpp  mcs_player.hpp  mcts_player.cpp  mcts_player.hpp  random_action_player.cpp  random_action_player.hpp  uct_player.cpp  uct_player.hpp
src/common/: evaluation.hpp  evaluator.hpp  game.hpp  game_result.hpp  observation_space.hpp  player.hpp  search_tree.hpp  state.hpp  terminal_status.hpp
src/evaluators/: random_action_evaluator.cpp  random_action_evaluator.hpp
src/games/connect4/: connect4_game.cpp  connect4_game.hpp  connect4_state.cpp  connect4_state.hpp
src/games/othello/: othello_game.cpp  othello_game.hpp  othello_state.cpp  othello_state.hpp
src/searchTrees/grave/: grave.cpp  grave.hpp  grave_node.cpp  grave_node.hpp
src/searchTrees/mcrave/: mcrave.cpp  mcrave.hpp  mcrave_node.cpp  mcrave_node.hpp
src/searchTrees/mcs/: mcs.cpp  mcs.hpp
src/searchTrees/monteCarlo/: mcts.cpp  mcts.hpp  node.cpp  node.hpp  terminal_state.hpp
src/searchTrees/uct/: uct.cpp  uct.hpp  uct_node.cpp  uct_node.hpp
test/: CMakeLists.txt
test/arena/: match_test.cpp
test/common/: game_test.cpp  player_test.cpp
